2003-09-11  Stipe Tolj  <tolj@wapme-systems.de>
    * gwlib/mime.c, test/test_mime_multipart.c: fixed compiler warnings.

2003-09-10  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/utils.[ch]: added gw_isalnum(int) wrapper for isalnum(int) function.

2003-09-10  Stipe Tolj  <tolj@wapme-systems.de>
    * gwlib/parse.[ch]: added routines parse_get_line() to get the Octstr
      stream up to an EOL and parse_get_seperated_block() to get an next 
      Octstr block between two seperators. 
    * gwlib/mime.[ch]: added MIME multipart/related parsing routines. This
      allows to parse an MIME document given as Octstr into our own 
      MIMEEntity representation which is a hierarchical linked structure.
    * test/test_mime_multipart.c: added simple testing instance for the MIME
      parsing and transcoding routines.
    
2003-09-10  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/octstr.c: fixed bug in octstr_replace(...). We should not replace
      in replacement, so just skip replacement length. Otherwise here follow
      simple OOM: 
          Octsr *str = octstr_create("abacd"), *needle = octstr_imm("a"), *repl = octstr_imm("aa");
          octstr_replace(str, needle, repl);
      and wait for...

2003-09-05  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_smpp.c: changed pdu_to_msg() to recode source_addr and
      destination_addr on the MO side. We will pass an prefixed '+' to the
      smsbox side. Otherwise there is no chance for backend applicatins, like
      smsbox to descide what type of number it is.
      BEWARE: this may be an behaviour change for your individual setup, if
      you relly that the number is transmitted in pure TON=1 notation to the
      smsbox. In this case please use unified-prefix on the smsc group level
      to get rid of the prefixed '+'.
      Thanks to Alex for providing the patch.

2003-09-04  Stipe Tolj  <tolj@wapme-systems.de>
    * wap/wsp_[strings.[ch]|session.c]: fixed compiler warnings.
